# quizell

./: ChangeLog.md  README.md  TODO  build.sh  default.nix  package.yaml  quizell.cabal  result  stack.yaml
app/: Main.hs  Mainx.hs  TUI.hs
data/: default  sample_quiz.q
frontend/: Main.hs  Model.hs  ResultStore.hs  Views.hs  app.cabal  index.html  quizell.css
output/lib/ghcjs-8.6.0.1/package.conf.d/: quizell-0.1.0.0-AZG4VTt9FymDcZbx37SYJs.conf
output/lib/ghcjs-8.6.0.1/x86_64-linux-ghcjs-8.6.0.1-ghc8_6_2/: libHSquizell-0.1.0.0-AZG4VTt9FymDcZbx37SYJs-ghcjs8.6.0.1.js_so
output/lib/ghcjs-8.6.0.1/x86_64-linux-ghcjs-8.6.0.1-ghc8_6_2/quizell-0.1.0.0-AZG4VTt9FymDcZbx37SYJs/: MainHelpers.js_dyn_hi  MainHelpers.js_hi  MainHelpers.js_p_hi  QuestionParser.js_dyn_hi  QuestionParser.js_hi  QuestionParser.js_p_hi  Quiz.js_dyn_hi  Quiz.js_hi  Quiz.js_p_hi  QuizCLI.js_dyn_hi  QuizCLI.js_hi  QuizCLI.js_p_hi  QuizResults.js_dyn_hi  QuizResults.js_hi  QuizResults.js_p_hi  QuizTaker.js_dyn_hi  QuizTaker.js_hi  QuizTaker.js_p_hi  Utils.js_dyn_hi  Utils.js_hi  Utils.js_p_hi  libHSquizell-0.1.0.0-AZG4VTt9FymDcZbx37SYJs.js_a  libHSquizell-0.1.0.0-AZG4VTt9FymDcZbx37SYJs_p.js_a
output/nix-support/: propagated-build-inputs
site/: lib.js  out.frefs.js  out.frefs.json  out.js  out.stats  quizell.css
src/: CLI.hs  Lib.hs  MainHelpers.hs  QuestionParser.hs  Quiz.hs  QuizCLI.hs  QuizParser.hs  QuizResults.hs  QuizTaker.hs  TUI.hs  Utils.hs  ZipperQuiz.hs
test/: Spec.hs  Unit.hs
windows/: Mainx.hs
