name:                Quizell-Backend
version:             0.1.0.0
synopsis:            Quizell written in MISO
category:            Web
build-type:          Simple
cabal-version:       >=1.10

executable app
  main-is:             Main.hs
  ghcjs-options:
    -dedupe
  build-depends:
    base, 
    miso, 
    ghcjs-base
  default-language:    Haskell2010
